nginx conf updated

--- a/docker/nginx/conf.d/static.conf
+++ b/docker/nginx/conf.d/static.conf
@@ -1,6 +1,6 @@
 map $http_origin $AccessControlAllowOrigin {
     https://${APP_HOST}         $http_origin;
-    https://master.${APP_HOST}  $http_origin;
+    https://admin.${APP_HOST}   $http_origin;
 }
 
 server {
@@ -29,30 +29,6 @@ server {
 
     location /storage/ {
         alias /local/www/storage/app/public/;
-    }
-
-    # inbox files
-    location /inbox/ {
-        fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-
-        fastcgi_param  SCRIPT_FILENAME    /local/www/public/index.php;
-        fastcgi_param  REQUEST_METHOD     $request_method;
-        fastcgi_param  SCRIPT_NAME        index.php;
-
-        fastcgi_param  QUERY_STRING       $query_string;
-        fastcgi_param  CONTENT_TYPE       $content_type;
-        fastcgi_param  CONTENT_LENGTH     $content_length;
-        fastcgi_param  REQUEST_URI        $request_uri;
-        fastcgi_param  DOCUMENT_URI       $document_uri;
-        fastcgi_param  DOCUMENT_ROOT      $document_root;
-        fastcgi_param  SERVER_PROTOCOL    $server_protocol;
-        fastcgi_param  REQUEST_SCHEME     $scheme;
-        fastcgi_param  HTTPS              $https if_not_empty;
-        fastcgi_param  SERVER_NAME        $server_name;
-    }
-    location /inbox-files/ {
-        internal;
-        alias /local/www/storage/app/inbox/;
     }
 
     location / {
